src/_includes/layouts/project/_base.scss
@use '../../../stylesheets/mixin/breakpoints.scss' as bp;
@use '../../../stylesheets/mixin/grids.scss' as grids;
@use '../../../stylesheets/mixin/colours.scss' as colours;
@use '../../../stylesheets/variables.scss' as variables;

@mixin project-page-base(){
    @include grids.main-grid;
    transition: all, .5s;
    position: relative;
    * :not(.project-header):not(.project-banner):not(.owl-carousel *) {
        gap: inherit;
        max-width: 44.5rem;        
    }
    h1, h2, h3, h4 {
        margin-inline: 0;
        margin-block: 0;
        text-wrap: balance;
    }
    h4 {
        font-size: 1.125rem;
    }
    .content {
        width: 100%;
    }
    .project-header {
        grid-column: 1/13;
        display: grid;
        grid-template-columns: subgrid;
        gap: inherit;

        .project-banner {
            grid-column: 1/13;
        }
        .information {
            padding: 2rem 0;
            display: flex;
            gap: 1rem;
            flex-direction: column;
        }
        .details {
            font-size: 1rem;
        }
        a {
            font-size: 1rem;
            margin: -.5rem; 
            padding: .5rem;
            width: fit-content;
        }
        .award-badge {
            display: flex;
            width: fit-content;
            background-color: colours.$bg-tertiary;
            padding: 0.375rem 1rem;
            border-radius: 10rem;
            margin-top: .5rem;
        }
    }
    #back-link{
        svg {
            flex-shrink: 0;
        }
        align-items: center;
        background: none;
        color: colours.$links;
        display: flex;
        gap: .25rem;
        grid-column: 2/4;
        height: fit-content;
        justify-self: flex-start;
        margin: 0 -1rem;
        overflow: visible;
        padding: 1rem;
        text-decoration: underline;
        width: fit-content;
    }
    table {
        th, td {
            padding: .5rem;
            vertical-align: text-top;
        }
    }
    table, li {
        font-size: 1.125rem;
    }
    figure {
        margin-block: 1rem;
        img {
            width: 100%;
        }
    }
    figcaption {
        text-wrap: balance;
        text-align: center;
        font-style: italic;
        color: colours.$text-subdued;
        a {
            font-size: 1rem;
        }
    }

    h2, p {
        margin-block: 0;
        margin-bottom: 1rem;
    }
    p:last-of-type {
        margin: 1rem 0;
    }
    .persona {
        border-radius: 1rem;
        font-size: 1.125rem;
        blockquote {
            border: none;
            text-align: center;
            text-wrap: balance;
            font-style: italic;
        }
        b {
            font-weight: bold;
        }
        .title {
            background-color: colours.$bg-primary;
            border-radius: 1rem;
            display: flex;
            align-items: center;
            gap: 1rem 2rem;
            padding: 1rem;
            justify-content: center;
            padding-right: 3rem;
            .portrait {
                border-radius: 100%;
                width: 4rem;
            }
            .name {
                font-size: 1.125rem;
            }
        }
        ul {
            padding-top: 1rem;
        }
    }
    .webmentions {
        &-header {
            > .webmentions-header_title {
                display: flex;
                gap: 1ch;
                span {
                    font-size: 1.5rem;
                    font-weight: bold;
                }
            }
            a {
                width: fit-content;
            }
            padding: 2rem;
            display: flex;
            justify-content: space-between;
        }
        max-width: 44.5rem;
        width: 100%;
        .webmention {
            &.reaction {
                .author {
                    display: flex;
                    align-items: center;
                }
                time {
                    display: block;
                    color: colours.$text-subdued;
                    font-size: 0.875rem;
                }
                img {
                    width: 2rem;
                    border-radius: 1rem;
                }
                a {
                    font-size: 1rem;
                }
                > .photo {
                    background: transparent;
                    font-size: unset;
                }
                background-color: transparent;
                display: flex;
                flex-direction: row;
                padding: 0;
                align-items: center;
                gap: 1rem;
            }
            &:first-of-type {
                margin-block: 1rem;
            }
            &:not(:last-of-type) {
                margin-bottom: 1rem;
            }
            background-color: colours.$bg-primary;
            padding: 1rem;
            .header {
                display: flex;
                gap: 1rem;
                align-items: center;
                margin-bottom: 1rem;
                div {
                    .author {
                        font-size: 1.25rem;
                    }
                }
                img {
                    height: 3.75rem;
                    width: 3.75rem;
                    border-radius: 1rem;
                }
            }
        }
        details {
            margin-bottom: 2rem;
            &[open]{
                summary {
                    .chevron-down {
                        rotate: 0deg;
                    }
                }
            }
            summary {
                display: flex;
                gap: 1rem;
                .chevron-down {
                    rotate: 180deg;
                    transition: transform, .3s;
                }
            }
        }
        .webmentions-h2 {
            align-content: center;
            display: flex;
            gap: 1ch;
            color: colours.$text-subdued;
            h2 {
                margin-bottom: 0;
            }
            span {
                font-size: 1.5rem;
                font-weight: bold;
            }
        }
        .p-name {
            font-size: 1.25rem;
        }
        .u-url {
            font-size: 1.25rem;
        }
    }
    .update-note.update-note {
        p {
            background-color: colours.$bg-primary;
            padding: 2rem;
        }
    }
    .blogpost.note .mention-link {
        font-size: 1rem;
        overflow-wrap: anywhere;
    }
    .blogpost.note .blogpost-content {
        row-gap: 0;
        picture img {
            width: 100%;
        }
        p {
            margin-inline: unset;
            margin-block: 1rem;
        }
    }
    .blogpost.note .blogpost-header {
        gap: 0;
    }
    .blogpost.note .u-photo:not(:last-child) {
        margin-bottom: 1rem;;
    }
}

